[tool.poetry]
name = "act"
version = "0.0.1a0"
description = "CLI tool to configure and run parameterized actions against targets."
authors = ["Josh Wycuff <Josh.Wycuff@gmail.com>"]
readme = "README.md"
packages = [{include = "act"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
act = "act.main:main"
